fix: update heroui dependencies and clean up sidebar props; enhance login page with icons and adjust styles fix: bug on mobile screen sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,10 +99,6 @@
   outline: none !important;
 }
 
-.tooltip-no-pointer {
-  pointer-events: none !important;
-}
-
 /* Style untuk Print */
 @media print {
   /* Sembunyikan semua elemen kecuali area yang bisa dicetak */
